# mal4s

./: .gitignore  .gitmodules  Makefile.am  README  README.md  configure.ac  dissect.conf  mal4s.rb  mal4s.win32.cbp
data/: apwg.conf  dissect.conf  dnsm.conf  genip.conf  httpm.conf  mal4s-searcher.sh  mal4s.1  newns.conf  sample--newns.captions  sample--newns.mal4s  sample-mal4s.conf
scripts/: license.rtf  mal4s.nsi
src/: dirnode.h  file.cpp  file.h  gource.cpp  gource.h  gource_settings.cpp  gource_settings.h  gource_shell.cpp  key.cpp  key.h  logmill.cpp  logmill.h  main.cpp  pawn.h  user.cpp  user.h
src/formats/: commitlog.cpp  commitlog.h  custom.cpp  mal4s.cpp  mal4s.h
